# uswid-uefi-example

./: LICENSE  README.md  compiler.ini  embed-hash-in-ini.py  inf2ini.py  meson.build  toplevel.ini
parachuted/: fwupdx64.efi  meson.build  secret.ini  secret.uswid
src/: meson.build
src/CryptoDxe/: CryptoDxe.c  CryptoDxe.h  CryptoDxe.inf  meson.build  supplemental.ini
ucode/: intel-ucode-06-03-02.ini  intel-ucode-06-03-02.json  meson.build
